Revision history for Gimp-Perl extension.

1.098 Wed Jul 21 20:57:12 CEST 1999
	- do not try to compile gimp_personal_rc_file without gimp-1.1.
        - fixed old prefix detection.
        - get rid of "glib-config" dependency and use AM_PATH_GLIB instead.
        - do not install examples/magick until it is repeaired.

1.097 Wed Jul 14 22:55:24 CEST 1999
	- updated perlotine.
        - updated pixelmap with stub documentation.
        - redim_pdl calls affine_new directly rather than via the
          perl interpreter -> smaller Perl-Server, faster operation.
        - try to uninstall. Of course this doesn't work here, so just
          trust it will work elsewhere.
        - improved yinyang for the perl calendar ;)
        - added perl_fu_ as prefix for Image, Drawables and Channels.
        - fixed Load/Save of PF_TEXT.

1.096 Thu Jul  8 21:36:36 CEST 1999
	- fix around PDL-2.002 exporting its own ppport.h.
        - new scripts examples/frame_reshuffle and examples/frame_filter.
        - added Gimp::Fu::PF_TEXT.
        - added gimp_directory, gimp_data_directory and gimp_personal_rc_file.
        - added accelerator keys (escape and return) for Gimp::Fu::interact.

1.095 Tue Jun 29 01:22:01 CEST 1999
	- finally cut support for gimp-1.0.2 and gtk-1.0,
          fix the underscore confusion in Gimp/Net.pm.

1.094 Fri Jun 25 01:21:17 CEST 1999
	- finally(?) fixed the runmode confusion by making these constants
          magic. Also hopefully fixed the error message.
	- enable embedded pod sections in standard register arguments.
        - improved scm2perl ever so slightly.
        - fixed xpm off-by-one bug in embedxpm (and added embedxpm).
        - fixed off-by-one error in Gimp::Fu and exmaples/PDB.

1.093 Tue Jun 15 21:48:48 CEST 1999
	- possible workaround for Gimp::Util::gimp_layer_get_position.
	- WRAP, SMEAR and BLACK were not being exported.
	- fixed small bug in pixelmap.
	- implemented gimp_query_procedure in XS.