@@ -104,4 +104,5 @@ embedxpm
 logo.xpm
 examples/frame_reshuffle
 examples/frame_filter
+examples/gouge
 
