@@ -1,5 +1,9 @@
 Revision history for Gimp-Perl extension.
 
+	- region functions (except data) wrongly returned transposed matrices.
+          Now the order of dimensions is bpp <- width <- height.
+        - implemented and added examples/gouge.
+
 1.098 Wed Jul 21 20:57:12 CEST 1999
 	- do not try to compile gimp_personal_rc_file without gimp-1.1.
         - fixed old prefix detection.
